--- a/style.css
+++ b/style.css
@@ -12,15 +12,15 @@ body {
     text-align: center;
     background: rgba(255, 255, 255, 0.15);
     border-radius: 20px;
-    padding: 40px 60px;
+    padding: 30px 60px;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.title {
-    font-size: 24px;
+.name {
+    font-size: 45px;
     color: white;
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
     margin-bottom: 20px;
@@ -45,4 +45,5 @@ body {
     color: #ffffff;
     text-shadow: 0 0 25px rgba(255, 255, 255, 0.9);
     font-weight: bold;
+    padding-bottom: 20px;
 }
